--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -34,7 +34,8 @@ a:focus {
     padding: 2rem 16px 0 16px;
 
     &__picture {
-      width: 160px;
+      width: 155px;
+      height: 160px;
       position: relative;
 
       &__img {
@@ -42,7 +43,7 @@ a:focus {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 160px;
+        width: 155px;
         height: 160px;
         z-index: 10;
         border-radius: 50%;
